matrix-livekit/livekit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit
  namespace: matrix-livekit
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: livekit
  template:
    metadata:
      labels:
        app: livekit
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: yeager
      containers:
        - name: livekit
          image: livekit/livekit-server:latest@sha256:d0c04791bf63ca8dcea123571827d56ba9504bd57c8d5de60ee03b5408cc3154
          args: ["--config", "/etc/livekit/config.yaml"]
          volumeMounts:
            - name: config-rendered
              mountPath: /etc/livekit
              readOnly: true
          resources:
            limits:
              memory: "384Mi"
              cpu: "750m"
            requests:
              memory: "128Mi"
              cpu: "50m"
      volumes:
        - name: config-tmpl
          configMap:
            name: livekit-config
        - name: config-rendered
          emptyDir: {}
