matrix-livekit/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: matrix-livekit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      hostname: auth-server
      containers:
        - name: auth-service
          image: ghcr.io/element-hq/lk-jwt-service:latest@sha256:fe787619877b9c12d4370ed39dc8edecf99b1a71fa8958c0fdcb687c1d31c775
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: ca-certs
              mountPath: /etc/ssl/certs
              readOnly: true
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
            requests:
              memory: "32Mi"
              cpu: "25m"
      volumes:
        - name: ca-certs
          hostPath:
            path: /etc/ssl/certs
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: matrix-livekit
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30070
